Removed white flashing

--- a/public/index.html
+++ b/public/index.html
@@ -21,6 +21,12 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <style>
+      html {
+        background-color: #1e1e1e;
+        color: white;
+      }
+    </style>
     <title>Login</title>
   </head>
   <body>
